@@ -305,8 +305,8 @@ CONFIG_PHY_LAN8720=n
 CONFIG_PHY_AUTONEG=y
 CONFIG_PHY_SPEED100=n
 CONFIG_PHY_FDUPLEX=y
-CONFIG_NET_NTXDESC=7
-CONFIG_NET_NRXDESC=7
+CONFIG_NET_NTXDESC=3
+CONFIG_NET_NRXDESC=5
 CONFIG_NET_REGDEBUG=n
 CONFIG_NET_DESCDEBUG=n
 CONFIG_NET_DUMPPACKET=n
